@@ -48,6 +48,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 *Filebeat*
 
 - Fix date format in Mongodb Ingest pipeline. {pull}7974[7974]
+- Fixed a docker input error due to the offset update bug in partial log join.{pull}8177[8177]
 
 *Heartbeat*
 
